--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@huddle01/react": "^1.0.0-alpha.57",
+    "@huddle01/server-sdk": "^1.0.0-alpha.25",
     "@material-tailwind/react": "^2.1.5",
     "@mooncake-dev/react-day-time-picker": "^1.0.5",
     "@pushprotocol/uiweb": "^1.1.22",
@@ -12,11 +14,13 @@
     "@testing-library/user-event": "^13.5.0",
     "browserify-zlib": "^0.2.0",
     "constants-browserify": "^1.0.0",
+    "hark": "^1.2.3",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
