--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@huddle01/server-sdk": "^1.0.0-alpha.25",
     "@material-tailwind/react": "^2.1.5",
     "@mooncake-dev/react-day-time-picker": "^1.0.5",
+    "@pushprotocol/restapi": "^1.4.45",
     "@pushprotocol/uiweb": "^1.1.22",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
