--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "browserify-zlib": "^0.2.0",
     "constants-browserify": "^1.0.0",
+    "ethers": "^6.9.0",
     "hark": "^1.2.3",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
