--- a/contract/package.json
+++ b/contract/package.json
@@ -14,6 +14,7 @@
     "hardhat": "^2.19.2"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "erc721a": "^4.2.3"
   }
 }
