--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@huddle01/react": "^1.0.0-alpha.58",
     "@huddle01/server-sdk": "^1.0.0-alpha.25",
     "@material-tailwind/react": "^2.1.5",
+    "@metamask/sdk-react": "^0.14.1",
     "@metamask/sdk-react-ui": "^0.14.1",
     "@mooncake-dev/react-day-time-picker": "^1.0.5",
     "@mui/icons-material": "^5.14.19",
@@ -21,6 +22,7 @@
     "@testing-library/user-event": "^13.5.0",
     "browserify-zlib": "^0.2.0",
     "constants-browserify": "^1.0.0",
+    "ethers": "^5.7.2",
     "hark": "^1.2.3",
     "markdown-to-jsx": "^7.3.2",
     "mdb-react-ui-kit": "^7.0.0",
@@ -32,7 +34,8 @@
     "react-speech-recognition": "^3.10.0",
     "recharts": "^2.10.3",
     "styled-components": "^6.1.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^4.3.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
